--- a/doc/source/_static/local-style.css
+++ b/doc/source/_static/local-style.css
@@ -5,6 +5,7 @@ html {
 body {
   font-family: "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 1.0rem;
+  background-color: #36393F;
 }
 
 code {
